# elastos-runtime

./: .gitignore  PRINCIPLES.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  components.json  justfile  state.md
.github/workflows/: ci.yml
capsules/agent/: Cargo.toml  capsule.json
capsules/agent/src/: api.rs  main.rs
capsules/ai-provider/: Cargo.toml  capsule.json
capsules/chat/: Cargo.toml  capsule.json
capsules/chat-wasm/: capsule.json
capsules/chat/src/: ansi_ui.rs  app.rs  carrier.rs  command.rs  main.rs  main_stdio.rs  session.rs  term_input.rs  ui.rs
capsules/did-provider/: Cargo.toml  capsule.json
capsules/did-provider/src/: main.rs
capsules/gba-emulator/: UPSTREAM.md  capsule.json  emulator.js  index.html  style.css
capsules/gba-ucity/: capsule.json
capsules/ipfs-provider/: Cargo.toml  capsule.json  kubo-checksums.json
capsules/ipfs-provider/src/: main.rs
capsules/llama-provider/: Cargo.toml  capsule.json
capsules/llama-provider/src/: main.rs
capsules/md-viewer/: capsule.json  index.html
capsules/notepad/: Cargo.toml  capsule.json
capsules/notepad/src/: main.rs
capsules/pc2/: Cargo.toml  capsule.json
capsules/pc2/src/: main.rs
capsules/site-provider/: Cargo.toml
capsules/site-provider/src/: main.rs
capsules/tunnel-provider/: Cargo.toml  capsule.json
capsules/webspace-provider/: Cargo.toml  capsule.json
capsules/webspace-provider/src/: main.rs
docs/: ARCHITECTURE.md  CAPSULE_MODEL.md  CARRIER.md  COMMAND_MATRIX.md  GETTING_STARTED.md  GLOSSARY.md  INSTALL.md  NAMESPACES.md  OVERVIEW.md  README.md  RUNTIME_REPO_USER_STORY_CHECKLIST.md  SHARE_VERSIONING.md  SITES.md  VERSIONING.md
elastos/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
elastos/.cargo/: config.toml
elastos/capsules/localhost-provider/: Cargo.toml  capsule.json
elastos/capsules/localhost-provider/src/: main.rs
elastos/capsules/shell/: Cargo.toml  capsule.json  policy.json.example
elastos/capsules/shell/src/: main.rs
elastos/crates/elastos-common/: Cargo.toml
elastos/crates/elastos-common/src/: chat_protocol.rs  error.rs  lib.rs  localhost.rs  manifest.rs  timestamp.rs  types.rs
elastos/crates/elastos-compute/: Cargo.toml
elastos/crates/elastos-compute/src/: lib.rs  traits.rs
elastos/crates/elastos-compute/src/providers/: mod.rs  wasm.rs
elastos/crates/elastos-crosvm/: Cargo.toml
elastos/crates/elastos-crosvm/src/: config.rs  lib.rs  network.rs  provider.rs  proxy.rs  rootfs.rs  vm.rs
elastos/crates/elastos-guest/: Cargo.toml
elastos/crates/elastos-guest/src/: lib.rs  runtime.rs
elastos/crates/elastos-identity/: Cargo.toml
elastos/crates/elastos-identity/src/: lib.rs  store.rs  webauthn.rs
elastos/crates/elastos-namespace/: Cargo.toml
elastos/crates/elastos-namespace/src/: lib.rs  namespace.rs  resolver.rs  store.rs
elastos/crates/elastos-runtime/: Cargo.toml
elastos/crates/elastos-runtime/src/: lib.rs
elastos/crates/elastos-runtime/src/bootstrap/: mod.rs  runtime_builder.rs  shell.rs
elastos/crates/elastos-runtime/src/capability/: evaluator.rs  manager.rs  mod.rs  pending.rs  policy.rs  store.rs  token.rs
elastos/crates/elastos-runtime/src/capsule/: fetched_launch.rs  manager.rs  mod.rs
elastos/crates/elastos-runtime/src/handler/: io_bridge.rs  mod.rs  protocol.rs  request_handler.rs
elastos/crates/elastos-runtime/src/messaging/: channel.rs  mod.rs
elastos/crates/elastos-runtime/src/primitives/: audit.rs  metrics.rs  mod.rs  time.rs
elastos/crates/elastos-runtime/src/provider/: bridge.rs  mod.rs  registry.rs
elastos/crates/elastos-runtime/src/session/: mod.rs  registry.rs
elastos/crates/elastos-runtime/src/signature/: mod.rs  verifier.rs
elastos/crates/elastos-runtime/tests/: http_api_integration.rs  integration.rs
elastos/crates/elastos-server/: Cargo.toml  build.rs
elastos/crates/elastos-server/src/: agent_cmd.rs  binaries.rs  capsule_cmd.rs  capsule_publish_cmd.rs  carrier.rs  carrier_bridge.rs  carrier_service.rs  chat_cmd.rs  config_cmd.rs  crypto.rs  fetcher.rs  gateway_cmd.rs  gateway_entry.rs  identity_cmd.rs  init.rs  init_cmd.rs  ipfs.rs  lib.rs  local_http.rs  main.rs  ownership.rs  pc2_cmd.rs  publish.rs  release_cmd.rs  run_cmd.rs  runtime.rs  security_cmd.rs  serve_cmd.rs  server_infra.rs  setup.rs  share_cmd.rs  shares.rs  shares_cmd.rs  shell_cmd.rs  site_cmd.rs  sources.rs  supervisor.rs  trust_cmd.rs  update.rs  vm_provider.rs  (+1 more)
elastos/crates/elastos-server/src/api/: gateway.rs  middleware.rs  mod.rs  routes.rs  server.rs
elastos/crates/elastos-server/src/api/handlers/: attach.rs  capability.rs  docs.rs  identity.rs  mod.rs  namespace.rs  orchestrator.rs  provider.rs  storage.rs  supervisor_api.rs  test_helpers.rs
elastos/crates/elastos-storage/: Cargo.toml
elastos/crates/elastos-storage/src/: cache.rs  content_id.rs  large_cache.rs  lib.rs  traits.rs
elastos/crates/elastos-storage/src/mutable/: local.rs  mod.rs
elastos/crates/elastos-storage/src/providers/: ipfs.rs  ipfs_streaming.rs  local.rs  mod.rs
elastos/crates/elastos-tls/: Cargo.toml
elastos/crates/elastos-tls/src/: lib.rs
elastos/docs/: PEER_PROTOCOL.md
elastos/scripts/: cache-manage.sh  clean-debug.sh  ipfs-start.sh  run-microvm-cid.sh
elastos/tests/: notepad_e2e.sh
elastos/tools/vsock-proxy/: Cargo.toml
elastos/tools/vsock-proxy/src/: main.rs
scripts/: README.md  agent.sh  build.sh  chat-wasm-local-smoke.sh  chat-wasm-local.sh  chat-wasm-native-interop-smoke.sh  chat.sh  check-versioning.sh  check-wci-alignment.sh  command-smoke.sh  gba-demo-smoke.sh  gba.sh  identity-profile-smoke.sh  install.sh  installed-command-audit.sh  installed-native-chat-smoke.sh  installed-pc2-chat-reuse-smoke.sh  irc-demo-local-smoke.sh  irc-demo-local.sh  local-carrier-chat-smoke.sh  local-carrier-setup-smoke.sh  local-identity-profile-smoke.sh  notepad.sh  pc2-demo-local.sh  pc2-frontdoor-smoke.sh  pc2-smoke.sh  resolve-binary.sh  setup-crosvm.sh  share-demo.sh  shared-runtime-gossip-proof.sh  vendor-gba-runtime.sh
scripts/fetch/: fetch-cloudflared.sh  fetch-model.sh
tests/: docker-chat-test.sh
(+2 files in other folders)
