[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "ElastOS AI Agent - joins P2P chat and responds via LLM"
license = "MIT"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
signal-hook = "0.3"
elastos-common = { path = "../../elastos/crates/elastos-common" }

[profile.release]
opt-level = "s"
lto = true

[workspace]
