[package]
name = "chat"
version = "0.1.0"
edition = "2021"
description = "ElastOS P2P Chat Capsule - mIRC/IRSSI-style TUI"
license = "MIT"

[[bin]]
name = "chat"
path = "src/main.rs"

[[bin]]
name = "chat-stdio"
path = "src/main_stdio.rs"

[dependencies]
elastos-guest = { path = "../../elastos/crates/elastos-guest" }
elastos-common = { path = "../../elastos/crates/elastos-common" }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"
whoami = "1"
libc = "0.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.11"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[profile.release]
opt-level = "s"
lto = true

[workspace]
