[package]
name = "ipfs-provider"
version = "0.1.0"
edition = "2021"
description = "ElastOS ipfs-provider - IPFS operations via managed Kubo daemon"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[workspace]
