[package]
name = "llama-provider"
version = "0.1.0"
edition = "2021"
description = "ElastOS llama-provider - local LLM inference via llama-server"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }

[workspace]
