[package]
name = "notepad"
version = "0.1.0"
edition = "2021"
description = "ElastOS Notepad Capsule - capability-aware note CRUD"
license = "MIT"

[[bin]]
name = "notepad"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true

[workspace]
