[package]
name = "webspace-provider"
version = "0.1.0"
edition = "2021"
description = "ElastOS WebSpace provider capsule"
license = "MIT"

[[bin]]
name = "webspace-provider"
path = "src/main.rs"

[dependencies]
elastos-common = { path = "../../elastos/crates/elastos-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true

[workspace]
