[package]
name = "elastos-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compute abstraction layer for ElastOS"

[dependencies]
elastos-common = { path = "../elastos-common" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
wasi-common = "17"
wasmtime = "17"
wasmtime-wasi = "17"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
libc = "0.2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.0"
