[package]
name = "elastos-crosvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ElastOS crosvm Compute Provider - Run capsules in crosvm VMs"

[dependencies]
elastos-common = { path = "../elastos-common" }
elastos-compute = { path = "../elastos-compute" }

tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["process", "signal"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.10"
