[package]
name = "elastos-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Identity management (WebAuthn/Passkey) for ElastOS"

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
ciborium = "0.2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"

[dev-dependencies]
tempfile = "3.10"
