[package]
name = "elastos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ElastOS Runtime Library - Core security primitives"

[lib]
name = "elastos_runtime"
path = "src/lib.rs"

[dependencies]
elastos-common = { path = "../elastos-common" }
elastos-namespace = { path = "../elastos-namespace" }
elastos-storage = { path = "../elastos-storage" }
elastos-compute = { path = "../elastos-compute" }

tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Cryptography for capsule signatures
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Capability tokens
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"

# Async traits
async-trait = "0.1"

# Configuration file (used by bootstrap/runtime_builder)
toml = "0.8"

# Temp files (used in content resolver)
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.10"
