[package]
name = "elastos-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ElastOS Server - HTTP API, CLI, and orchestration"

[[bin]]
name = "elastos"
path = "src/main.rs"

[dependencies]
elastos-runtime = { path = "../elastos-runtime" }
elastos-namespace = { path = "../elastos-namespace" }
elastos-common = { path = "../elastos-common" }
elastos-storage = { path = "../elastos-storage" }
elastos-compute = { path = "../elastos-compute" }
elastos-tls = { path = "../elastos-tls" }
elastos-identity = { path = "../elastos-identity" }
elastos-crosvm = { path = "../elastos-crosvm" }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# TLS (ring crypto provider)
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# HTTP client (for IPFS operations)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for content hashing in publish/sign commands)
sha2 = "0.10"
hex = "0.4"

# URL parsing (used by identity HTTP handlers)
url = "2.5"

# CID validation (for share URI parsing)
cid = "0.11"

# DID key encoding (base58)
bs58 = "0.5"

# Base64 encoding (for ipfs-provider bridge)
base64 = "0.22"

# Ed25519 signing (for provenance attestations)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# ed25519-dalek 3.x needed by distributed-topic-tracker for DHT record signing.
# Cargo resolves both versions; we convert between them via raw key bytes.
ed25519-dalek3 = { package = "ed25519-dalek", version = "=3.0.0-pre.1" }

# Directory helpers
dirs = "5.0"

# Configuration file
toml = "0.8"

# Temp files (for CID preparation)
tempfile = "3.10"

# Archive extraction (for capsule artifacts)
flate2 = "1.0"
tar = "0.4"
libc = "0.2"

# Built-in Carrier transport (P2P for updates, gossip messaging, DHT discovery)
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-gossip = "0.96"
distributed-topic-tracker = "0.2"
futures-lite = "2.6"
getrandom = "0.2"
data-encoding = "2.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }

[features]
default = []
