[package]
name = "elastos-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage abstraction layer for ElastOS"

[dependencies]
elastos-common = { path = "../elastos-common" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
lru = "0.12"
tracing = "0.1"
futures = "0.3"
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.0"
