[package]
name = "elastos-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TLS certificate management for ElastOS"

[dependencies]
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
time = "0.3"
tokio = { version = "1.0", features = ["net", "io-util", "rt", "macros", "time"] }
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["full", "test-util"] }
