[package]
name = "vsock-proxy"
version = "0.1.0"
edition = "2021"
description = "TCP to vsock proxy for crosvm VMs"

[workspace]

[dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["socket"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
